--- a/projects/user/src/app/pages/playlist/playlist.component.html
+++ b/projects/user/src/app/pages/playlist/playlist.component.html
@@ -22,17 +22,13 @@
                <a href="teacher-profile">
                   <h3>Giảng Viên A</h3>
                </a>
-               <span>21-10-2022</span>
+               <span>{{dataCourse.start_time}}</span>
             </div>
          </div>
 
          <div class="details">
-            <h3>Hướng Dẫn HTML Cơ Bản</h3>
-            <p>
-               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum minus
-               reiciendis, error sunt veritatis exercitationem deserunt velit
-               doloribus itaque voluptate.
-            </p>
+            <h3>{{dataCourse.title}}</h3>
+            <p>{{dataCourse.description}}</p>
             <h3>
                Đánh Giá :
                <i class="fa-solid fa-star"></i>
