--- a/src/app/pages/discount/list/discount.component.html
+++ b/src/app/pages/discount/list/discount.component.html
@@ -53,7 +53,7 @@
                   </div>
                 </td>
                 <td>{{ item.code }}</td>
-                <td>{{ item.percentage }}</td>
+                <td>{{ item.percentage + '%'}}</td>
                 <td>{{ item.startDate }}</td>
                 <td>{{ item.startEnd }}</td>
                 <td>
