--- a/src/app/pages/discount/update/update.discount.component.html
+++ b/src/app/pages/discount/update/update.discount.component.html
@@ -144,7 +144,7 @@
                     <div class="modal-content" style="width: 811px;"> 
                       <div class="modal-header">
                         <h4 class="modal-title">Create/Update DiscountCourse</h4>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" (click)="ngOnInit()"></button>
                       </div>                
                       <div class="modal-body">
                         <table class="table">
