--- a/projects/user/src/app/pages/teachers/teachers.component.html
+++ b/projects/user/src/app/pages/teachers/teachers.component.html
@@ -20,7 +20,7 @@
              <img src="https://i.pinimg.com/originals/8b/16/7a/8b167af653c2399dd93b952a48740620.jpg" alt="">
              <div>
                 <h3>{{item.fullName}}</h3>
-                <!-- <span>{{item.specialization}}</span> -->
+                <span>{{item.roleName}}</span>
              </div>
           </div>
           <p>tổng số danh sách phát : <span>{{item.quantityCourse}}</span></p>
