--- a/projects/user/src/app/pages/home/home.component.html
+++ b/projects/user/src/app/pages/home/home.component.html
@@ -13,7 +13,7 @@
          <p class="likes">Tổng số lượt mua : <span>4</span></p>
          <a href="#" class="inline-btn">Xem lượt mua</a>
       </div> -->
-      
+
       <!-- <div class="box">
          <h3 class="title">top categories</h3>
          <div class="flex">
@@ -60,7 +60,7 @@
                 </ul>
             </li>
           </ul> -->
-          <ul class="nav">
+         <ul class="nav">
             <ng-container *ngFor="let category of treeCategories">
                <li><span>{{ category.name }}</span>
                   <ul *ngIf="category.children && category.children.length > 0">
@@ -68,19 +68,19 @@
                         <li>
                            <span>{{ child.name }}</span>
                            <ul *ngIf="child.children && child.children.length > 0">
-                             <ng-container *ngFor="let grandchild of child.children">
-                               <li>
-                                 <span>{{ grandchild.name }}</span>
-                               </li>
-                             </ng-container>
+                              <ng-container *ngFor="let grandchild of child.children">
+                                 <li>
+                                    <span>{{ grandchild.name }}</span>
+                                 </li>
+                              </ng-container>
                            </ul>
-                         </li>
+                        </li>
                      </ng-container>
                   </ul>
                </li>
             </ng-container>
-          </ul>
-          <!-- <ng-container *ngFor="let category of treeCategories">
+         </ul>
+         <!-- <ng-container *ngFor="let category of treeCategories">
             <li>
               <i class="fas fa-code"></i><span>{{ category.name }}</span>
               <ul *ngIf="category.children && category.children.length > 0">
@@ -111,7 +111,8 @@
 
    <div class="box-container">
 
-      <div class="box" *ngFor="let course of dataPage | paginate:{itemsPerPage:size,currentPage:page,totalItems:totalAllLength}">
+      <div class="box"
+         *ngFor="let course of dataPage | paginate:{itemsPerPage:size,currentPage:page,totalItems:totalAllLength}">
          <div class="tutor">
             <!-- <img src="{{course.user_id}}" alt=""> -->
             <img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png" alt="">
@@ -122,27 +123,31 @@
          </div>
          <div class="thumb">
             <!-- <img src="{{course.img_course}}" alt=""> -->
-            <img src="https://d1iv5z3ivlqga1.cloudfront.net/wp-content/uploads/2023/10/30114934/Huyen-A%CC%89nh-bi%CC%80a-blog-2023-10-30T114925.545-1024x576.png" alt="">
+            <img
+               src="https://d1iv5z3ivlqga1.cloudfront.net/wp-content/uploads/2023/10/30114934/Huyen-A%CC%89nh-bi%CC%80a-blog-2023-10-30T114925.545-1024x576.png"
+               alt="">
             <!-- <span>{{course.total_videos}}</span> -->
             <span>{{course.quantityLesson}}</span>
          </div>
          <h3 class="title">{{course.title}}</h3>
-         <a [href]="[course.courseId + '/playlist']" class="inline-btn">Xem Khóa Học</a>
+         <a [href]="[course.courseId + '/playlist']" class="inline-btn m-2 small-btn">Xem Khóa Học</a>
+         <a [href]="[course.courseId + '/playlist']" class="inline-btn m-2 small-btn">Thêm giỏ hàng</a>         
       </div>
    </div>
 
    <div class="card-footer py-4">
       <div class="d-flex align-items-center">
-        <select class="form-select mr-3" style="width: 100px; height: 30px;" [(ngModel)]="size" (ngModelChange)="onSizeChange($event)">
-          <option value="3">3</option>
-          <option value="6">6</option>
-          <option value="9">9</option>
-        </select>
-        <div class="ml-auto"></div>
-        <div class="pagination">
-          <pagination-controls (pageChange)="page=$event"></pagination-controls>
-        </div>
+         <select class="form-select mr-3" style="width: 100px; height: 30px;" [(ngModel)]="size"
+            (ngModelChange)="onSizeChange($event)">
+            <option value="3">3</option>
+            <option value="6">6</option>
+            <option value="9">9</option>
+         </select>
+         <div class="ml-auto"></div>
+         <div class="pagination">
+            <pagination-controls (pageChange)="page=$event"></pagination-controls>
+         </div>
       </div>
-    </div>
+   </div>
 
 </section>
