--- a/projects/user/src/app/pages/profile/profile.component.html
+++ b/projects/user/src/app/pages/profile/profile.component.html
@@ -4,13 +4,46 @@
  
     <div class="info">
  
-       <div class="user">
-          <img src="../../assets/images/pic-1.jpg" alt="">
-          <h3>Nguyễn Văn A</h3>
-          <p>Học Viên</p>
-          <a href="update" class="inline-btn">Cập nhật hồ sơ</a>
-       </div>
-    
+      <div class="user">
+         <img src="../../assets/images/pic-1.jpg" alt="" id="profileImage" class="custom-file-upload" (click)="onImageClick()">
+         <h3>{{userCloneData?.fullname}}, <span class="font-weight-light">, {{userCloneData?.date_of_birth}}</span></h3>
+         <p>{{userCloneData?.role_id}}</p>
+         <div class="user" style="visibility: hidden;">
+             <p>Cập nhật ảnh đại diện</p>
+             <input type="file" accept="image/*" class="box" id="fileInput" (change)="onFileSelected($event)">
+         </div>
+     </div>
+      <div style="padding-bottom: 20px;">
+         <section class="container">
+            <form enctype="multipart/form-data" class="row g-3" (ngSubmit)="save()" [formGroup]="userProfileForm">
+                <div class="col-md-6">
+                    <!-- Column 1 -->
+                    <p>Email <label style="color: red;">*</label></p>
+                    <input type="email" name="email" placeholder="example@example.com" maxlength="50" class="box form-control" disabled>
+                    <p>Ngày sinh <label style="color: red;">*</label></p>
+                    <input type="date" name="old_pass" placeholder="" maxlength="20"class="box form-control">
+                    <p>Mật khẩu mới <label style="color: red;">*</label></p>
+                    <input type="password" name="new_pass" placeholder="Nhập mật khẩu mới" maxlength="20" class="box form-control">
+                </div>
+                <div class="col-md-6">
+                     <p>Họ và tên:  <label style="color: red;">*</label></p>
+                    <input type="text" name="name" placeholder="..." maxlength="50" class="box form-control">
+                    <p>Địa chỉ <label style="color: red;">*</label></p>
+                    <input type="email" name="email" placeholder="" maxlength="50" class="box form-control">
+                    <p>Xác nhận mật khẩu <label style="color: red;">*</label></p>
+                    <input type="password" name="c_pass" placeholder="Xác nhận mật khẩu mới của bạn" maxlength="20"
+                        class="box form-control">
+                  
+                </div>
+                <div class="col-12">
+                    <!-- Submit Button -->
+                    <button type="submit" class="btn btn-primary" (click)="save()">Cập nhật hồ sơ</button>
+                </div>
+            </form>
+        </section>
+      </div>
+     
+
        <div class="box-container">
     
           <div class="box">
@@ -47,7 +80,9 @@
           </div>
     
        </div>
+
     </div>
  
  </section>
+ 
  
