--- a/projects/user/src/app/pages/cart/cart.component.html
+++ b/projects/user/src/app/pages/cart/cart.component.html
@@ -10,11 +10,11 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let item of carts">
-            <td>{{item.name}}</td>
-            <td>{{item.price}}</td>
-            <td><img src="{{item.img}}" alt="Ảnh sản phẩm 1"></td>
-            <td><a href="#">Xóa</a></td>
+        <tr *ngFor="let item of cartItems">
+            <td>{{item.title}}</td>
+            <td>{{item.priceDiscount}}</td>
+            <td><img src="https://d1iv5z3ivlqga1.cloudfront.net/wp-content/uploads/2023/10/30114934/Huyen-A%CC%89nh-bi%CC%80a-blog-2023-10-30T114925.545-1024x576.png" alt="Ảnh sản phẩm 1"></td>
+            <td><a (click)="removeFromLocalStorage(item.id);">Xóa</a></td>
         </tr>
     </tbody>    
 </table>
