--- a/src/app/pages/course/update/update.course.component.html
+++ b/src/app/pages/course/update/update.course.component.html
@@ -30,15 +30,13 @@
             <div class="row">
               <div class="col-lg-6">
                 <div class="form-group">
-                  <label class="form-control-label" for="input-title">Thumbnail:</label><span
+                  <label class="form-control-label" for="input-thumbnail">Thumbnail:</label><span
                     class="text-danger">*</span>
-                  <!-- Hiển thị ảnh đã chọn -->
-                  <img *ngIf="thumbnail" [src]="thumbnail" alt="Thumbnail" class="img-thumbnail mb-2"
+                  <img *ngFor="let image of thumbnail" [src]="image.imageUrl" alt="Thumbnail" class="img-thumbnail mb-2"
                     style="max-width: 100%; height: auto" />
-                  <!-- Nút chọn file -->
                   <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="input-thumbnail" (change)="onFileSelected($event)"
-                      formControlName="thumbnail" />
+                    <input type="file" #imageInput class="custom-file-input" id="input-thumbnail"
+                      (change)="onFileSelected(imageInput)" formControlName="thumbnail" />
                     <label class="custom-file-label" for="input-thumbnail">Choose Images</label>
                   </div>
                 </div>
@@ -67,7 +65,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-6" style="display: none">
                 <div class="form-group">
                   <label class="form-control-label" for="input-userID">User :</label><span class="text-danger">*</span>
                   <input type="text" id="input-userID" class="form-control form-control-alternative" placeholder="User"
@@ -78,15 +76,16 @@
                 <div class="form-group">
                   <label class="form-control-label" for="input-categoryID">Category:</label><span
                     class="text-danger">*</span>
-                  <select id="parent_id" class="form-control" [disabled]="selectedCategory?.level === 0"
-                     formControlName="parent_id">
+                  <select id="category_id" class="form-control" [disabled]="selectedCategory?.level === 0"
+                    formControlName="category_id">
                     <ng-container *ngFor="let item of categories">
-                      <option [disabled]="true" [value]="item.id.toString()">{{getIndentation(item.level)}} {{item.name}}</option>
+                      <option [disabled]="true" [value]="item.id.toString()">{{getIndentation(item.level)}}
+                        {{item.name}}</option>
                       <ng-container *ngFor="let child of item.children">
-                        <option [disabled]="true" [value]="child.id.toString()">{{getIndentation(child.level)}} {{child.name}}</option>
+                        <option [disabled]="true" [value]="child.id.toString()">{{getIndentation(child.level)}}
+                          {{child.name}}</option>
                         <ng-container *ngIf="child.children">
-                          <option *ngFor="let grandchild of child.children" [value]="grandchild.id.toString()"
-                            >
+                          <option *ngFor="let grandchild of child.children" [value]="grandchild.id.toString()">
                             {{getIndentation(grandchild.level)}} {{grandchild.name}}
                           </option>
                         </ng-container>
@@ -95,7 +94,7 @@
                   </select>
                 </div>
               </div>
-              <div class="col-lg-6">
+              <div class="col-lg-12">
                 <div class="form-group">
                   <label class="form-control-label" for="input-description">Description :</label>
                   <textarea type="text" id="input-description" class="form-control form-control-alternative"
