fix create image course to s3

--- a/projects/user/src/app/pages/courses/courses.component.html
+++ b/projects/user/src/app/pages/courses/courses.component.html
@@ -8,7 +8,7 @@
 
          <div class="box" *ngFor="let course of dataCoursePage | paginate:{itemsPerPage:size,currentPage:page,totalItems:totalAllLength}">
             <div class="tutor">
-               <!-- <img src="{{course.user_id}}" alt=""> -->
+               <!-- <img src="{{course.userId}}" alt=""> -->
                <img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png" alt="">
                <div class="info">
                   <h3>{{course.fullname}}</h3>
