--- a/src/app/pages/course/list/course.component.html
+++ b/src/app/pages/course/list/course.component.html
@@ -54,7 +54,7 @@
                 <td>{{ item.description }}</td>
                 <td style="display: none;">{{ item.start_time | date: 'dd/MM/yyyy' }}</td>
                 <td style="display: none;">{{ item.end_time | date: 'dd/MM/yyyy' }}</td>
-                <td style="display: none;">{{ item.user_id }}</td>
+                <td style="display: none;">{{ item.userId }}</td>
                 <td>{{ item.category_id }}</td>
                 <td>
                   <span class="badge badge-dot mr-4 align-items-center" [style.color]="'black'">
