--- a/src/app/pages/course/update/update.course.component.html
+++ b/src/app/pages/course/update/update.course.component.html
@@ -25,101 +25,109 @@
         </div>
       </div>
       <div class="card-body">
-        <form [formGroup]="dataForm" (ngSubmit)="save()">
-          <div class="pl-lg-4">
+        <form [formGroup]="dataForm" (ngSubmit)="save()" enctype="multipart/form-data">
+          <div class="pl-lg-12">
             <div class="row">
-              <div class="col-lg-6">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-thumbnail">Thumbnail:</label><span
-                    class="text-danger">*</span>
-                  <img *ngFor="let image of thumbnail" [src]="image.imageUrl" alt="Thumbnail" class="img-thumbnail mb-2"
-                    style="max-width: 100%; height: auto" />
-                  <div class="custom-file">
-                    <input type="file" #imageInput class="custom-file-input" id="input-thumbnail"
-                      (change)="onFileSelected(imageInput)" formControlName="thumbnail" />
-                    <label class="custom-file-label" for="input-thumbnail">Choose Images</label>
-                  </div>
+              <div class="col-md-6">
+                <div class="form-group text-center">
+                  <!-- <input type="file" id="imageFile" name="imageFile" formControlName="imageFile" class="custom-file-input" (change)="handleFileInput($event.target.files)" />
+                  <img id="thumbnail" name="thumbnail" type="img" [src]="dataForm.get(['thumbnail']).value" alt="thumbnail" class="img-thumbnail mb-2" style="width: 100%;" height="auto" controls formControlName="thumbnail"/> -->
+                  <input type="file" id="imageFile" name="imageFile" formControlName="imageFile" class="custom-file-input" (change)="handleFileInput($event.target.files)" />
+                  <img id="thumbnail" name="thumbnail" type="img" [src]="dataForm.get(['thumbnail']).value"
+                    formControlName="thumbnail" alt="thumbnail" class="img-thumbnail mb-2" style="width: 100%;" height="auto" controls />
+
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-title">Title :</label> <span class="text-danger">*</span>
-                  <input type="text" id="input-title" formControlName="title"
-                    class="form-control form-control-alternative" placeholder="Title" />
-                  <div *ngIf="dataForm.get('title').hasError('required') && dataForm.get('title').touched"
-                    class="text-danger">Title is required.
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-price">Price :</label>
-                  <span class="text-danger">*</span>
-                  <input type="number" id="input-price" class="form-control form-control-alternative"
-                    placeholder="Price" formControlName="price" />
-                  <div *ngIf="dataForm.get('price').hasError('required') && dataForm.get('price').touched"
-                    class="text-danger">Price is required.
-                  </div>
-                  <div *ngIf="dataForm.get('price').hasError('min') && dataForm.get('price').touched"
-                    class="text-danger">Giá bài học phải lớn hơn 100 VND.
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6" style="display: none">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-userID">User :</label><span class="text-danger">*</span>
-                  <input type="text" id="input-userID" class="form-control form-control-alternative" placeholder="User"
-                    formControlName="user_id" [value]="dataForm.get('user_id').value" readonly />
+                <div class="form-group text-right">
+                  <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
+                  <button id="choose-button" class="btn btn-sm btn-info float-right mr-4"
+                    (click)="openFilePicker($event)">Chọn</button>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-categoryID">Category:</label><span
-                    class="text-danger">*</span>
-                  <select id="category_id" class="form-control" [disabled]="selectedCategory?.level === 0"
-                    formControlName="category_id">
-                    <ng-container *ngFor="let item of categories">
-                      <option [disabled]="true" [value]="item.id.toString()">{{getIndentation(item.level)}}
-                        {{item.name}}</option>
-                      <ng-container *ngFor="let child of item.children">
-                        <option [disabled]="true" [value]="child.id.toString()">{{getIndentation(child.level)}}
-                          {{child.name}}</option>
-                        <ng-container *ngIf="child.children">
-                          <option *ngFor="let grandchild of child.children" [value]="grandchild.id.toString()">
-                            {{getIndentation(grandchild.level)}} {{grandchild.name}}
-                          </option>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-title">Title :</label> <span
+                      class="text-danger">*</span>
+                    <input type="text" id="input-title" formControlName="title"
+                      class="form-control form-control-alternative" placeholder="Title" />
+                    <div *ngIf="dataForm.get('title').hasError('required') && dataForm.get('title').touched"
+                      class="text-danger">Title is required.
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-price">Price :</label>
+                    <span class="text-danger">*</span>
+                    <input type="number" id="input-price" class="form-control form-control-alternative"
+                      placeholder="Price" formControlName="price" />
+                    <div *ngIf="dataForm.get('price').hasError('required') && dataForm.get('price').touched"
+                      class="text-danger">Price is required.
+                    </div>
+                    <div *ngIf="dataForm.get('price').hasError('min') && dataForm.get('price').touched"
+                      class="text-danger">Giá bài học phải lớn hơn 100 VND.
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-6" style="display: none">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-userID">User :</label><span
+                      class="text-danger">*</span>
+                    <input type="text" id="input-userID" class="form-control form-control-alternative"
+                      placeholder="User" formControlName="userId" [value]="dataForm.get('userId').value" readonly />
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-categoryID">Category:</label><span
+                      class="text-danger">*</span>
+                    <select id="categoryId" class="form-control" [disabled]="selectedCategory?.level === 0"
+                      formControlName="categoryId">
+                      <ng-container *ngFor="let item of categories">
+                        <option [disabled]="true" [value]="item.id.toString()">{{getIndentation(item.level)}}
+                          {{item.name}}</option>
+                        <ng-container *ngFor="let child of item.children">
+                          <option [disabled]="true" [value]="child.id.toString()">{{getIndentation(child.level)}}
+                            {{child.name}}</option>
+                          <ng-container *ngIf="child.children">
+                            <option *ngFor="let grandchild of child.children" [value]="grandchild.id.toString()">
+                              {{getIndentation(grandchild.level)}} {{grandchild.name}}
+                            </option>
+                          </ng-container>
                         </ng-container>
                       </ng-container>
-                    </ng-container>
-                  </select>
+                    </select>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-12">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-description">Description :</label>
-                  <textarea type="text" id="input-description" class="form-control form-control-alternative"
-                    placeholder="Description" formControlName="description"></textarea>
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-description">Description :</label>
+                    <textarea type="text" id="input-description" class="form-control form-control-alternative"
+                      placeholder="Description" formControlName="description"></textarea>
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-6" style="display: none">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
-                  <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative"
-                    placeholder="Enrollment Count" formControlName="enrollment_count" />
+                <div class="col-lg-6" style="display: none">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-enrollmentCount">Enrollment Count :</label>
+                    <input type="text" id="input-enrollmentCount" class="form-control form-control-alternative"
+                      placeholder="Enrollment Count" formControlName="enrollment_count" />
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-6">
-                <div class="form-group" style="display: none">
-                  <label class="form-control-label" for="input-id">ID :</label>
-                  <input type="text" id="input-id" class="form-control form-control-alternative" formControlName="id" />
+                <div class="col-lg-6">
+                  <div class="form-group" style="display: none">
+                    <label class="form-control-label" for="input-id">ID :</label>
+                    <input type="text" id="input-id" class="form-control form-control-alternative"
+                      formControlName="id" />
+                  </div>
                 </div>
-              </div>
-              <div class="col-lg-12">
-                <div class="form-group">
-                  <label class="form-control-label" for="input-status">Status</label><span class="text-danger">*</span>
-                  <div class="form-check form-switch" style="margin-left: 20px;">
-                    <input class="form-check-input" type="checkbox" id="mySwitch" name="is_delete"
-                      formControlName="is_delete">
+                <div class="col-lg-12">
+                  <div class="form-group">
+                    <label class="form-control-label" for="input-status">Status</label><span
+                      class="text-danger">*</span>
+                    <div class="form-check form-switch" style="margin-left: 20px;">
+                      <input class="form-check-input" type="checkbox" id="mySwitch" name="is_delete"
+                        formControlName="is_delete">
+                    </div>
                   </div>
                 </div>
               </div>
