--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -55,16 +55,15 @@
               </div>
             </div>
             <div class="form-group">
-              <div class="text-center text-muted">
+              <div class="text-center text-muted" style="text-align: center;">
                 <small>Quyền đăng nhập</small>
               </div>
-              <select class="d-flex align-items-center m-b-12"
-                  [(ngModel)]="selectedRole" (change)="onRoleChange($event)" style="width: 100%; color: #333; background-color: #fff;">
-                  <label class="d-flex align-items-center m-b-12"> Quyền đăng nhập </label>
-                  <option *ngFor="let role of roles" [ngValue]="role">
-                      {{ role.name }}
-                  </option>
-              </select>
+              <div class="form-group">
+                <label for="roleSelect" class="d-flex align-items-center m-b-12" style="font-size: 14px; padding-top: 10px;">Quyền đăng nhập</label>
+                <select id="roleSelect" class="form-control" [(ngModel)]="selectedRole" style="font-size: 14px;" (change)="onRoleChange($event)" [ngModelOptions]="{standalone: true}">
+                  <option *ngFor="let role of roles" [ngValue]="role">{{ role.name }}</option>
+                </select>
+              </div>
             </div>
             <div class="custom-control custom-control-alternative custom-checkbox">
               <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
