--- a/src/app/pages/user-profile/user-edit/user-edit.component.html
+++ b/src/app/pages/user-profile/user-edit/user-edit.component.html
@@ -74,6 +74,15 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                              <label class="form-control-label" for="input-status">Status</label>
+                              <div class="form-check form-switch" style="margin-left: 20px;">
+                                <input class="form-check-input" type="checkbox" id="mySwitch" name="is_active"
+                                  formControlName="is_active">
+                              </div>
+                            </div>
+                        </div>
                         <hr class="my-4" />
                         <!-- Address -->
                         <h6 class="heading-small text-muted mb-4">Contact information</h6>
@@ -129,6 +138,7 @@
                             </div>
                             </div>
                         </div>
+                        
                         <hr class="my-4" />
                         <!-- Description -->
                         <h6 class="heading-small text-muted mb-4">About me</h6>
