In-Progress : playlist

--- a/projects/user/src/app/pages/playlist/playlist.component.css
+++ b/projects/user/src/app/pages/playlist/playlist.component.css
@@ -106,6 +106,13 @@
 }
 
 /*playlist-videos*/
+.playlist-videos .box-container .box-wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+    justify-content: center;
+    align-items: flex-start;
+}
 
 .playlist-videos .box-container{
     display: grid;
