--- a/projects/user/src/app/pages/playlist/playlist.component.html
+++ b/projects/user/src/app/pages/playlist/playlist.component.html
@@ -50,46 +50,17 @@
    </div>
 </section>
 
-<section class="playlist-videos">
-
+<section class="playlist-videos" *ngFor="let item of dataSection">
    <br />
-   <h1 class="heading">Phần 2 <i class="fa-solid fa-lock"></i></h1>
+   <h1 class="heading">{{ item.title }}<i class="fa-solid fa-lock ml-2"></i></h1>
 
    <div class="box-container">
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-1.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 01)</h3>
-      </a>
-
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-2.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 02)</h3>
-      </a>
-
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-3.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 03)</h3>
-      </a>
-
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-4.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 04)</h3>
-      </a>
-
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-5.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 05)</h3>
-      </a>
-
-      <a class="box" href="watch-video">
-         <i class="fas fa-play"></i>
-         <img src="../../assets/images/post-1-6.png" alt="" />
-         <h3>Hướng Dẫn HTML Cơ Bản (bài 06)</h3>
-      </a>
+      <div class="box-wrapper" *ngFor="let lesson of item.lessons">
+         <a class="box" href="watch-video">
+            <i class="fas fa-play"></i>
+            <img src="../../assets/images/post-1-1.png" alt="" />
+            <h3>{{ lesson.title }}</h3>
+         </a>
+      </div>
    </div>
 </section>
