--- a/projects/user/src/app/pages/cart/cart.component.html
+++ b/projects/user/src/app/pages/cart/cart.component.html
@@ -15,7 +15,7 @@
             <td>{{item.priceDiscount}}</td>
             <td><img src="https://d1iv5z3ivlqga1.cloudfront.net/wp-content/uploads/2023/10/30114934/Huyen-A%CC%89nh-bi%CC%80a-blog-2023-10-30T114925.545-1024x576.png"
                     alt="Ảnh sản phẩm 1"></td>
-            <td><a (click)="removeFromLocalStorage(item.id);">Xóa</a></td>
+            <td><button (click)="removeFromLocalStorage(item.id);">Xóa</button></td>
         </tr>
     </tbody>
 </table>
