In-Progres: Rating

--- a/projects/user/src/app/pages/playlist/playlist.component.css
+++ b/projects/user/src/app/pages/playlist/playlist.component.css
@@ -1,3 +1,5 @@
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 /*playlist-details*/
 .playlist-details .row{
     display: flex;
@@ -167,3 +169,25 @@
 a{
     text-decoration: none;
 }
+
+.rating_start{
+    font-size: 30px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    cursor: pointer;
+}
+
+
+ngb-rating {
+    color: rgb(165, 165, 29);
+    font-size: 40px;
+  }
+  
+  .star {
+    position: relative;
+    display: inline-block;
+    font-size: 3rem;
+    color: #d3d3d3;
+  }
+
+  
