--- a/src/app/pages/course/update/update.course.component.html
+++ b/src/app/pages/course/update/update.course.component.html
@@ -30,46 +30,44 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group text-center">
-                  <!-- <input type="file" id="imageFile" name="imageFile" formControlName="imageFile" class="custom-file-input" (change)="handleFileInput($event.target.files)" />
-                  <img id="thumbnail" name="thumbnail" type="img" [src]="dataForm.get(['thumbnail']).value" alt="thumbnail" class="img-thumbnail mb-2" style="width: 100%;" height="auto" controls formControlName="thumbnail"/> -->
-                  <input type="file" id="imageFile" name="imageFile" formControlName="imageFile" class="custom-file-input" (change)="handleFileInput($event.target.files)" />
+                  <input type="file" id="imageFile" name="imageFile" formControlName="imageFile"
+                    class="custom-file-input" (change)="handleFileInput($event.target.files)" />
                   <img id="thumbnail" name="thumbnail" type="img" [src]="dataForm.get(['thumbnail']).value"
-                    formControlName="thumbnail" alt="thumbnail" class="img-thumbnail mb-2" style="width: 100%;" height="auto" controls />
-
+                    alt="thumbnail" class="img-thumbnail mb-2" style="width: 100%;" height="auto" controls
+                    formControlName="thumbnail" />
                 </div>
                 <div class="form-group text-right">
-                  <button id="cancel-button" class="btn btn-sm btn-default">Hủy</button>
                   <button id="choose-button" class="btn btn-sm btn-info float-right mr-4"
-                    (click)="openFilePicker($event)">Chọn</button>
+                    (click)="openFilePicker($event)">Chọn ảnh</button>
                 </div>
               </div>
               <div class="col-md-6">
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-title">Title :</label> <span
                       class="text-danger">*</span>
                     <input type="text" id="input-title" formControlName="title"
                       class="form-control form-control-alternative" placeholder="Title" />
                     <div *ngIf="dataForm.get('title').hasError('required') && dataForm.get('title').touched"
-                      class="text-danger">Title is required.
+                      class="text-danger">Trường này bắc buộc nhập.
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-price">Price :</label>
                     <span class="text-danger">*</span>
                     <input type="number" id="input-price" class="form-control form-control-alternative"
                       placeholder="Price" formControlName="price" />
                     <div *ngIf="dataForm.get('price').hasError('required') && dataForm.get('price').touched"
-                      class="text-danger">Price is required.
+                      class="text-danger">Trường này bắc buộc nhập.
                     </div>
                     <div *ngIf="dataForm.get('price').hasError('min') && dataForm.get('price').touched"
                       class="text-danger">Giá bài học phải lớn hơn 100 VND.
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-6" style="display: none">
+                <div class="col-lg-12" style="display: none">
                   <div class="form-group">
                     <label class="form-control-label" for="input-userID">User :</label><span
                       class="text-danger">*</span>
@@ -77,7 +75,7 @@
                       placeholder="User" formControlName="userId" [value]="dataForm.get('userId').value" readonly />
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-12">
                   <div class="form-group">
                     <label class="form-control-label" for="input-categoryID">Category:</label><span
                       class="text-danger">*</span>
@@ -101,7 +99,7 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-description">Description :</label>
+                    <label class="form-control-label" for="input-description">Mô Tả :</label>
                     <textarea type="text" id="input-description" class="form-control form-control-alternative"
                       placeholder="Description" formControlName="description"></textarea>
                   </div>
@@ -122,7 +120,7 @@
                 </div>
                 <div class="col-lg-12">
                   <div class="form-group">
-                    <label class="form-control-label" for="input-status">Status</label><span
+                    <label class="form-control-label" for="input-status">Trạng Thái</label><span
                       class="text-danger">*</span>
                     <div class="form-check form-switch" style="margin-left: 20px;">
                       <input class="form-check-input" type="checkbox" id="mySwitch" name="is_delete"
