done add and remove cart

--- a/projects/user/src/app/pages/header/header.component.html
+++ b/projects/user/src/app/pages/header/header.component.html
@@ -53,7 +53,7 @@
    <nav class="navbar">
       <a href="home"><i class="fas fa-home"></i><span>Trang Chủ</span></a>
       <a href="courses"><i class="fas fa-graduation-cap"></i><span>Khóa học</span></a>
-      <a href="cart"><i class="fas fa-cart-shopping"></i><span>Giỏ hàng</span><span style="margin-left: 5px;background-color: #87CEFA;padding: 0px 5px;border-radius: 50%;color: #fff">4</span></a>
+      <a href="cart"><i class="fas fa-cart-shopping"></i><span>Giỏ hàng</span><span style="margin-left: 5px;background-color: #87CEFA;padding: 0px 5px;border-radius: 50%;color: #fff"></span></a>
       <a href="purchased-course"><i class="fas fa-history"></i><span>Khóa Học Đã Mua</span></a>
       <a href="contact"><i class="fas fa-headset"></i><span>Liên Hệ</span></a>
       <a href="teachers"><i class="fas fa-chalkboard-user"></i><span>Giảng Viên</span></a>
