--- a/projects/user/src/app/pages/home/home.component.html
+++ b/projects/user/src/app/pages/home/home.component.html
@@ -123,9 +123,7 @@
          </div>
          <div class="thumb">
             <!-- <img src="{{course.img_course}}" alt=""> -->
-            <img
-               src="https://d1iv5z3ivlqga1.cloudfront.net/wp-content/uploads/2023/10/30114934/Huyen-A%CC%89nh-bi%CC%80a-blog-2023-10-30T114925.545-1024x576.png"
-               alt="">
+            <img [src]="'https://d36tk4l5z2wqhk.cloudfront.net/'+course.thumbnail" alt="">
             <!-- <span>{{course.total_videos}}</span> -->
             <span>{{course.quantityLesson}}</span>
          </div>
